[tool.poetry]
name = "python-studies"
version = "0.1.0"
description = "Python continuing studies using hypermodern tooling"
authors = ["Salil Athalye <823500+salilathalye@users.noreply.github.com>"]
repository = "https://github.com/salilathalye/python-studies"
readme = "README.md"
packages = [{include = "python_studies"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
